Add the variations in section component

--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
             </div>
         </section>
 
-        <section class="section">
+        <section class="section -bgblack">
+            
+            <h2 class="main-title -second">Pojetos</h2>
+
             <figure class="card-project">
                 <img class="logo" src="img/logo-firedlabs.png" alt="Logo firedlabs">
             </figure>
