Create the wrapper-card component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/components/progress-bar.css">
         <link rel="stylesheet" href="css/components/wrapper-projetos.css">
         <link rel="stylesheet" href="css/components/card-project.css">
+        <link rel="stylesheet" href="css/components/wrapper-card.css">
         
     </head>
     <body>
@@ -134,18 +135,20 @@
         </section>
 
         <section class="section -bgblack">
-            
-            <h2 class="main-title -second">Pojetos</h2>
 
-            <figure class="card-project">
-                <img class="logo" src="img/logo-firedlabs.png" alt="Logo firedlabs">
-            </figure>
-            <figure class="card-project -blue">
-                <img class="logo" src="img/logo-collabcode.png" alt="Logo collabcode">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/logo2.png" alt="Avatar Diego">
-            </figure>
+            <h2 class="main-title -second">Pojetos</h2>
+            <div class="wrapper-card">
+
+                <figure class="card-project">
+                    <img class="logo" src="img/logo-firedlabs.png" alt="Logo firedlabs">
+                </figure>
+                <figure class="card-project -blue">
+                    <img class="logo" src="img/logo-collabcode.png" alt="Logo collabcode">
+                </figure>
+                <figure class="card-project">
+                    <img class="logo" src="img/logo2.png" alt="Avatar Diego">
+                </figure>
+            </div>
         </section>
     </body>
 </html>
