Add the links to card-project

--- a/index.html
+++ b/index.html
@@ -138,16 +138,21 @@
 
             <h2 class="main-title -second">Pojetos</h2>
             <div class="wrapper-card">
-
-                <figure class="card-project">
-                    <img class="logo" src="img/logo-firedlabs.png" alt="Logo firedlabs">
-                </figure>
-                <figure class="card-project -blue">
-                    <img class="logo" src="img/logo-collabcode.png" alt="Logo collabcode">
-                </figure>
-                <figure class="card-project">
-                    <img class="logo" src="img/logo2.png" alt="Avatar Diego">
-                </figure>
+                <a href="https://www.firedlabs.com" target="_blank">
+                    <figure class="card-project">
+                        <img class="logo" src="img/logo-firedlabs.png" alt="Logo firedlabs">
+                    </figure>
+                </a>
+                <a href="https:.com" target="_blank">
+                    <figure class="card-project -blue">
+                        <img class="logo" src="img/logo-collabcode.png" alt="Logo collabcode">
+                    </figure>
+                </a>
+                <a href="https://diegosillva.github.io/diegosilva.github.io" target="_blank">
+                    <figure class="card-project">
+                        <img class="logo" src="img/logo2.png" alt="Avatar Diego">
+                    </figure>
+                </a>
             </div>
         </section>
     </body>
