--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/components/button.css">
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
-        <link rel="stylesheet" href="css/components/Box.css">
+        <link rel="stylesheet" href="css/components/main-box.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/wrapper-skills.css">
         <link rel="stylesheet" href="css/components/skills-tec.css">
@@ -42,7 +42,7 @@
         <section class="main-banner">
             <div class="wrapper">
 
-                <div class="box">
+                <div class="main-box">
                     <h1 class="main-title">Diego Silva</h1> 
                     <h2 class="subtitle">Support Tech</h2>
                     
