--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/components/main-header.css">
         <link rel="stylesheet" href="css/components/main-banner.css">
-        <link rel="stylesheet" href="css/components/section.css">
+        <link rel="stylesheet" href="css/components/main-section.css">
         <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/main-title.css">
         <link rel="stylesheet" href="css/components/subtitle.css">
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section class="section">
+        <section class="main-section">
             <h1 class="main-title -second">Skills</h1>
 
             <div class="wrapper-skills">
@@ -134,7 +134,7 @@
             </div>
         </section>
 
-        <section class="section -bgblack">
+        <section class="main-section -bgblack">
 
             <h2 class="main-title -second">Pojetos</h2>
             <div class="wrapper-card">
