--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/components/main-section.css">
         <link rel="stylesheet" href="css/components/main-button.css">
         <link rel="stylesheet" href="css/components/main-title.css">
-        <link rel="stylesheet" href="css/components/subtitle.css">
+        <link rel="stylesheet" href="css/components/main-subtitle.css">
         <link rel="stylesheet" href="css/components/main-box.css">
         <link rel="stylesheet" href="css/components/main-action.css">
         <link rel="stylesheet" href="css/components/wrapper-skills.css">
@@ -44,7 +44,7 @@
 
                 <div class="main-box">
                     <h1 class="main-title">Diego Silva</h1> 
-                    <h2 class="subtitle">Support Tech</h2>
+                    <h2 class="main-subtitle">Support Tech</h2>
                     
                 </div>
 
