--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="css/components/main-carousel.css">
         <link rel="stylesheet" href="css/components/button-arrow.css">
         <link rel="stylesheet" href="css/components/node-card.css">
+        <link rel="stylesheet" href="css/components/main-footer.css">
     </head>
     <body>
         <header class="main-header">
@@ -217,6 +218,18 @@
                 Hoje, sou Tec. de suporte Jr. em uma empresa terceirizada na motagem de telefone para Motorola, ja trabalhei em diversas areas de telefonia. Diego entrou na area de suporte em 2020, e hoje estou  descobrindo meu caminho na area de Technical Support. Atualmente estou fazendo faculdade de Eng. de Software, por que gosto de entender como as coisas funcionam por traz do fucnionamento das maquinas em si. Nas horas vagas gosto de assistir um filme e jogar um game.
             </p>
         </section> 
+
+        <footer class="main-footer">
+            <a class="action" href="https://twitter.com/Silva_diego87" target="_blank">
+                <img src="img/icon-twitter.png" alt="Logo do twitter em pixel art">
+            </a>
+            <a class="action" href="" target="_blank">
+                <img src="img/icon-youtube.png" alt="Logo do Youtube em pixel art">
+            </a>
+            <a class="action" href="" target="_blank">
+                <img src="img/icon-discord.png" alt="Logo do Discord em pixel art">
+            </a>
+        </footer>
         
         <script src="js/components/main-carousel.js"></script>
     </body>
