Create the main-lable component

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="css/components/button-arrow.css">
         <link rel="stylesheet" href="css/components/node-card.css">
         <link rel="stylesheet" href="css/components/main-footer.css">
+        <link rel="stylesheet" href="css/components/main-label.css">
     </head>
     <body>
         <header class="main-header">
@@ -218,6 +219,19 @@
                 Hoje, sou Tec. de suporte Jr. em uma empresa terceirizada na motagem de telefone para Motorola, ja trabalhei em diversas areas de telefonia. Diego entrou na area de suporte em 2020, e hoje estou  descobrindo meu caminho na area de Technical Support. Atualmente estou fazendo faculdade de Eng. de Software, por que gosto de entender como as coisas funcionam por traz do fucnionamento das maquinas em si. Nas horas vagas gosto de assistir um filme e jogar um game.
             </p>
         </section> 
+
+        <form >
+            <label class="main-label" for="name">Nome</label>
+            <input id="name" type="text">
+
+            <label class="main-label" for="email">Email</label>
+            <input id="email" type="email">
+
+            <label class="main-label" for="message">Mensagem</label>
+            <textarea id=""></textarea>
+            
+            <button type="submit">Enviar</button>
+        </form>
 
         <footer class="main-footer">
             <a class="action" href="https://twitter.com/Silva_diego87" target="_blank">
