--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="css/components/node-card.css">
         <link rel="stylesheet" href="css/components/main-footer.css">
         <link rel="stylesheet" href="css/components/main-label.css">
+        <link rel="stylesheet" href="css/components/main-input.css">
     </head>
     <body>
         <header class="main-header">
@@ -222,13 +223,13 @@
 
         <form >
             <label class="main-label" for="name">Nome</label>
-            <input id="name" type="text">
+            <input class="main-input" id="name" type="text">
 
             <label class="main-label" for="email">Email</label>
-            <input id="email" type="email">
+            <input  class="main-input" id="email" type="email">
 
             <label class="main-label" for="message">Mensagem</label>
-            <textarea id=""></textarea>
+            <textarea class="main-input" id=""></textarea>
             
             <button type="submit">Enviar</button>
         </form>
