--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <input  class="main-input" id="email" type="email">
 
             <label class="main-label" for="message">Mensagem</label>
-            <textarea class="main-input" id=""></textarea>
+            <textarea class="main-input -textarea" id=""></textarea>
             
             <button type="submit">Enviar</button>
         </form>
