--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="css/components/main-footer.css">
         <link rel="stylesheet" href="css/components/main-label.css">
         <link rel="stylesheet" href="css/components/main-input.css">
+        <link rel="stylesheet" href="css/components/main-form.css">
     </head>
     <body>
         <header class="main-header">
@@ -221,15 +222,16 @@
             </p>
         </section> 
 
-        <form >
+        <form class="main-form">
+            <legend>Contatos</legend>
             <label class="main-label" for="name">Nome</label>
-            <input class="main-input" id="name" type="text">
+            <input id="name" class="main-input"type="text">
 
             <label class="main-label" for="email">Email</label>
-            <input  class="main-input" id="email" type="email">
+            <input id="email"class="main-input" type="email">
 
             <label class="main-label" for="message">Mensagem</label>
-            <textarea class="main-input -textarea" id=""></textarea>
+            <textarea id="Mensagem" class="main-input -textarea" ></textarea>
             
             <button class="main-button -full" type="submit">Enviar</button>
         </form>
