--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </section> 
 
         <form class="main-form">
-            <legend>Contatos</legend>
+            <legend class="main-title -second">Contatos</legend>
             <label class="main-label" for="name">Nome</label>
             <input id="name" class="main-input"type="text">
 
